<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>app.cleancode</groupId>
  <artifactId>water-platformer</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>
  <modules>
  	<module>water-platformer-engine</module>
  	<module>water-platformer-game</module>
  </modules>
  <properties>
  <maven.compiler.target>19</maven.compiler.target>
  <maven.compiler.source>19</maven.compiler.source>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>